# hookemHacks2026

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  content_pool.json  pyproject.toml  requirements.txt  scrape_demo_links.py  seed_content_pool.py  test_scraper.py
api/: index.py
data/raw/: IMG_5857.HEIC
frontend/: Vibely.html
frontend/app/: App.jsx  Landing.jsx  Results.jsx  SearchPill.jsx  data.jsx  icons.jsx  styles.css
scrapers/: __init__.py  base.py  instagram.py  tiktok.py
scripts/: create_indexes.py  download_media.py  ingest_from_json.py  ingest_pool.py  ingest_uploads.py  ingest_url.py  seed_test_data.py
src/: app.py  config.py  db.py  describe.py  embeddings.py  ingest.py  intent.py  media.py  models.py  products.py  search.py  transcribe.py
