[project]
name = "vibesearch"
version = "0.1.0"
description = "Multimodal short-form content search engine"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "pymongo[srv]>=4.6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",
    "openai-whisper>=20240930",
]
